force-app/main/default/objects/ControlMapping__c/ControlMapping__c.object-meta.xml
<CustomObject>
    <label>Control Mapping</label>
    <nameField>
        <label>Control  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>