force-app/main/default/objects/ControlMapping__c/fields/Source_Control__c.field-meta.xml
<CustomField>
    <fullName>Source_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Control</label>
    <referenceTo>Control__c</referenceTo>
    <relationshipLabel>Control Mappings</relationshipLabel>
    <relationshipName>Control_Mappings_Source</relationshipName>
    <type>Lookup</type>
</CustomField>