force-app/main/default/objects/ControlMapping__c/fields/Target_Control__c.field-meta.xml
<CustomField>
    <fullName>Target_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Control</label>
    <referenceTo>Control__c</referenceTo>
    <relationshipLabel>Control Mappings (Target Control)</relationshipLabel>
    <relationshipName>Control_Mappings_Target</relationshipName>
    <type>Lookup</type>
</CustomField>